# zorya

./: .clang-format  .gitignore  .gitmodules  Brewfile  Brewfile.lock.json  CMakeLists.txt  Makefile  README.md  SusieBrowser  cmake_install.cmake  debian-dependencies.list  format.sh  makefile  makefile.old  run.sh  void-dependencies.list
cmake/: License.txt
dev/: parse_test.c  parse_test.html  parse_test.sh
docs/: CODING_GUIDELINES.md
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/: errorconecpt.xcf  test.html
res/freefont/: AUTHORS  CREDITS  ChangeLog  INSTALL  README  TROUBLESHOOTING  USAGE
res/install/: macos_bundle.plist
src/: config.h  main.c  main.h
src/UI/: browsing.c  browsing.h  error.c  error.h  home.c  home.h  homepage.c  homepage.h  statemachine.c  statemachine.h
src/antiralsei/: handler.c  handler.h  htmltree.c  htmltree.h  parse.c  parse.h
src/components/: text.c  text.h
src/core/: browser.c  browser.h  user_agent.c  user_agent.h  utils.h
src/data/: linkedlist.c  linkedlist.h
src/html/: .parse.c.swp  .parse.h.swp  handler.c  handler.h  html_handler.h  parse.c  parse.h  tree_utils.c  tree_utils.h
src/log/: #logging.c#  .#logging.c  logging.c  logging.h
src/net/: connect.c  connect.h
src/netwerk/: connect.c  connect.h  http.c  http.h  resolver.c  resolver.h  ssl.c  ssl.h  url.c  url.h
src/netwerk/protocols/: http.c  http.h  https.c
src/network/: connect.c  connect.h  http.c  resolver.c  resolver.h  ssl.c  ssl.h  url.c  url.h
src/suzTK/: browser.c  browser.h  pages.c  pages.h  text.c  text.h  window.c  window.h
src/suzTK/base-componyents/: button.c  button.h
src/utils/: .buffer.c.swp  buffer.c  buffer.h  host.c  host.h  http_status_codes.h  logging.c  logging.h  string.c  string.h
suzTK/: .gitkeep
test/: Makefile  attributes.html  heading.html  main.c  malformed.html  net_test  net_test.c  net_test.sh  paragraph.html  parse_test  parse_test.c  parse_test.sh  plaintext.html  simple.html
tools/: index.html  test_parse.sh
